--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,9 +55,9 @@ li a{
   width: 100%;
 }
 
-.container{
+/*.container{
   width: 100%;
-}
+}*/
 
 .inner-image{
   width: 100%;
@@ -66,7 +66,6 @@ li a{
   float: left;
   padding: 1px;
   margin: 10px;
-  background-color: grey;
 }
 
 .content-section-d {
@@ -82,4 +81,69 @@ li a{
 
 a{
   text-decoration: none;
+}
+
+.Food
+{
+  background-image: url("fresh_snow_@2X.png");
+  display: block;
+  padding: 20px;
+}
+
+.Food_Background{
+  height: 395px;
+  width: 100%;
+  background-image: url("fresh_snow_@2X.png");
+}
+
+.Food img{
+  max-width:25%;
+  max-height:25%;
+  float: right;
+  padding-top: 45px;
+  padding-right: 40px;
+}
+
+.Food p{
+text-align: left;
+float: left;
+clear: left;
+margin-top: 10px;
+}
+
+.Food h2{
+  float:right;
+  padding-top: 30px;
+  float:left;
+  clear: left;
+}
+
+.Activities img{
+  max-width:25%;
+  max-height:25%;
+  float: left;
+  clear: left;
+  padding-left: 45px;
+  padding-top: 20px;
+}
+
+.Activities h2{
+  padding-top: 30px;
+  float:right;
+  clear: right;
+  padding-right: 15px;
+}
+
+.Activities p{
+  text-align: right;
+  float: right;
+  clear: right;
+  margin-top: 10px;
+  padding-right: 15px;
+}
+
+.Activities_Background {
+  height: 425px;
+  width: 100%;
+  background-color: #f8f8f8;
 }
